tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__BasicBeeStats-AAAAAAAAAAAAAAAAAAAIow==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2211,
  "prerequisites": [
    2209
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are a couple of basic bees that have good stats you want to breed into your breeding stock.\n\nCave Dwelling - Rocky - This lets you put the bee housing underneath or inside. Handy for putting a chest on top for products.\n\nNocturnal - Rocky - This keeps your bees working all night long, and in the dark.\n\nRain Tolerant - Water - Keep producing even when it is raining.\n\nHigh Fertility - Wintry - For breeding purposes, you want the maximum number of drones produced.\n\nKeep in mind that specialty products from bees require the Jubilant state.\nTo be in this state, a bee needs to have its naturally preferred humidity and temperature. Just being able to work due to tolerance traits is not enough.\n\nFor example, a Salt bee needs Warm/Normal climate. Even if it has +- humidity and temp, it will not produce its Salt comb unless it is in a Warm/Normal climate. Use Alveary upgrades to make sure it is in its preferred temp/humidity.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Basic Bee Stats",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2209
  ],
  "rewards": [],
  "tasks": []
}
