tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__BasicNuclearFuel-AAAAAAAAAAAAAAAAAAAAwQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 193,
  "prerequisites": [
    190
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The weakest of all fuel rods, but very easy to produce, very easy to keep cool and runs twice as long as uranium. It even returns 1/3 of the thorium back later. A perfect \"fission and forget\" power source.\n\n[warn]Note: After they're used up you can recycle them to get Lutetium which is used for making americium in the fusion reactor. Americium is needed for top tier materials later, so start stockpiling now. Plus, you get power![/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lBasic Nuclear Fuel: Thorium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    190
  ],
  "rewards": [],
  "tasks": []
}
