tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__BetOnTheDistillu-AAAAAAAAAAAAAAAAAAAMQQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3137,
  "optional_prerequisites": [
    1416,
    3133
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "IV brings forth GT++ multis, including an upgrade for the Distillation Tower called the Dangote Distillus. Its structure is exactly the same as the DT, but it requires a muffler hatch and uses a different controller with a more expensive recipe.\n\nIt's also locked behind an IV Chemical Plant, which makes it a very expensive craft if it is the only use you have for that plant.\n\nThat said, it solves the issue of DTs being slow, and those are the backbone of many renewable setups. How many quad DTs are you going to need for reliable IV/LuV power, you might ask? Just go for it.\n\n[note]You can also use it to do single block Distillery recipes that can't be done in the DT, like making Sodium Potassium. However, that requires a max height tower.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bet On The Distillus",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
