tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__BetterQuesting-AAAAAAAAAAAAAAAAAAAF3A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1500,
  "prerequisites": [
    0
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Better Questing has a number of useful commands for the questbook (QB). You need to have cheats enabled to use them.\n\n/bq_admin default load\nUse this command to update your QB after you update the modpack. It reloads the quest database from the file. Your save file stores a version of the QB that can be different from the one in the file.\n\n/bq_admin edit\nToggles editing quests. Pressing RMB on the quest will open a context menu to share it or copy its ID.\n\n/bq_admin reset all <Player>\nResets all quests. Use this if you want to start over, or are editing the QB. You should specify the player as well if it is a server, otherwise you can skip that part.\n\n/bq_admin reset <ID> <Player>\nResets a specific quest, defined by the quest ID. Sometimes it may be easier to go into Edit Mode > Designer Tool to specify what to reset.\n\n/bq_admin complete <number> <Player>\nCompletes a specific quest, similarly to the above. You can still claim the rewards. Use this command if a quest is broken, and then report it on GitHub, but please check if it's already reported.\n\n/bq_admin default save\nSaves changes to the QB after editing it.\n\n/bq_copyquests <PlayerWithQuestsCompleted> <NewPlayer>\nIf you want to sync the quests with someone in your party, then use this. They won't get any rewards for that though.\n\n/bq_admin hardcore\nEnables BQ3 Hardcore Mode. You only start with 3 lives, so best of luck. Additional life hearts are available in the Kill all the Things tab.\n\nAside from the consume-type quests, a quest counts for everyone in the party if one person finished it. However, if someone joined your party later, you need to get them up to speed first either through /bq_copyquests above, or manually. Otherwise, your quest completion won't count for them because the requirements for that quest are not fulfilled for them.\n\nIf your singleplayer world does not have cheats enabled, go to the ESC screen, open to LAN, then enable cheats. This makes pausing impossible until you reload afterwards. If you host a server, you can run the commands in the command line, without \"/\". You can also edit the level.dat file, and set 'allowCommands' to 1, but make sure to backup your world before doing that.\n\n[warn]For quests to save properly, you must be online and logged into your Mojang account when starting the game. Sorry, it's a limitation of Better Questing.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lBetter Questing?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    0
  ],
  "rewards": [],
  "tasks": []
}
