tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__BringingtheBiome-AAAAAAAAAAAAAAAAAAAJbw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2415,
  "optional_prerequisites": [
    721,
    1511
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "So maybe you can't find a swamp or tropical forest for your crops or bees, or maybe they're too far away so they're inconvenient to get to, or maybe your base is in a colder climate and you have to deal with the howls of direwolves constantly. Instead of packing up all your stuff and moving somewhere else, why not try changing the biome? There are a couple different ways to do so in this modpack:\n\nUse the Arcane Terrestrial Reformer from Witching Gadgets\n-Requires EV Circuits, Tungstensteel, Rocket Tier III\n-Also requires Infusion, Void Metal (sufficient warp), Energized Node for CV, lots of Essentia\n-16 block radius\n-Can only change to a few specific Vanilla or Thaumcraft biomes\n-Kind of slow\n\nUse Ritual of Gaia's Transformation from Blood Magic\n-Requires Void Metal, Infusion, Tungstensteel\n-Requires getting deep into BM (and the warp that come with it)\n-Requires 1,000,000 LP, Master Blood Orb, Tier 4 Altar and Awakened Activation Crystal\n-10 block radius, can be exactly specified with bloodstone bricks (either type)\n-Cannot specify which biome you get, you can only change the temperature/humidity within the 0.0 - 2.0 range and hope\n-Some biomes may be impossible due to limited range and overlap\n-Adjust temperature/humidity with items on 8 plinths around the Master Ritual Stone\n-Need to relog to see changes\n-Very little documentation or explanation\n-Fast\n\nUse the Brew of Shifting Seasons from Witchery\n-Small range, depends on the level of the brew (power, not dispersal extent)\n-Biome can be exactly specified\n-Crafted using the complicated custom brew system\n-Can add different ingredients to change range of the brew\n-At min changes a single block\n-At max has about a 3 block (circular) radius\n-Instant (once you use it)\n\nUse the Rite of Shifting Seasons from Witchery\n-Requires Stainless Steel, Greatwood Scepter or better for the Distillery\n-You have to do a bunch of Witchery stuff\n-Not hard once you've done it once\n-Extremely large range, 16/32/48 block (circular) radius\n-Biome can be exactly specified\n-Sometimes fails in specific chunks\n-Very Fast\n\nIf you want to know how to use the Witchery methods, please go to the Look to the edges tab to continue.\n\nPSA: The IC2&Galacticraft Terraformers only change the surface, not the biome itself.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bringing the Biome to You",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
