tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__BrittleButHitsLi-AAAAAAAAAAAAAAAAAAAFzQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1485,
  "prerequisites": [
    539,
    1150
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Carbon crossbow limb is 1/3 the durability of the magnalium limb, but hits a lot harder and shoots a little faster. But you'll want to carry around a tinker table and extra ingots to repair it constantly, and watch that you don't break it in the middle of combat!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBrittle But Hits Like a Sledgehammer...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    539,
    1150
  ],
  "rewards": [],
  "tasks": []
}
