tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__CircuitProgrammi-AAAAAAAAAAAAAAAAAAAH_w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2047,
  "prerequisites": [
    105
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some machines have a very, very large number of recipes. To avoid conflicts, many recipes have programmed circuits to ensure that the correct recipe is used. These programmed circuits are not consumed.\n\nIn this modpack, all singleblock GT machines now come with an icon in the GUI on the bottom-right that represents a ghost circuit. Click it or scroll to choose the number you need. If you do that, you don't have to insert a physical circuit. This is going to be your main option for all single block machines. This option is now also available for input buses of multiblocks, which you will use much later.\n\nThere are a few places throughout the modpack where you still need the physical circuits. You can turn an LV circuit into a programmed circuit in the crafting grid and then program it in various ways:\n\n1) Find a correct crafting recipe with a screwdriver in NEI and use that.\n\n2) Right-click while holding the programmed circuit to open an easy menu. You still need to at least have the screwdriver in your inventory though or it won't work. Eventually you can also make an electric screwdriver.\n\n3) Use the BartWorks Circuit Programmer. It's only available in MV, but it does not use any durability and runs on EU.\n\n4) Use the GT++ Circuit Programmer block. It isn't portable and only available in MV, but it allows for automation.\n\nThe tasks in this quest are just the showcase of what programming circuits there are. You can just click the checkmark once you understand how the programmed circuits work.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lCircuit Programming",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    105
  ],
  "rewards": [],
  "tasks": []
}
